<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.stockquotes.MainActivity">

    <EditText
        android:id="@+id/stock_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stock_prompt"
        android:inputType="text"
        android:paddingTop="@dimen/prompt_padding"
                                />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/table_padding"
        app:layout_constraintTop_toBottomOf="@+id/stock_search">

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/symboldesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sym"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/symbolcont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/namedesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="18sp"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/namecont"
                android:layout_width="wrap_content"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/lastpricedesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/last_price"
                android:textSize="18sp"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/lastpricecont"
                android:layout_width="wrap_content"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                android:layout_height="match_parent" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/lasttimedesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/last_time"
                android:textSize="18sp"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/lasttimecont"
                android:layout_width="wrap_content"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                android:layout_height="match_parent" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/changedesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/change"
                android:textSize="18sp"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/changecont"
                android:layout_width="wrap_content"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                android:layout_height="match_parent" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/rangedesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/range"
                android:textSize="18sp"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/rangecont"
                android:layout_width="wrap_content"
                android:background="@android:color/black"
                android:text="@string/space"
                android:textSize="18sp"
                android:textColor="@android:color/holo_green_light"
                android:layout_height="match_parent" />


        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>
